# lnrpc/routerrpc/router.swagger.json
@@ -1526,6 +1526,19 @@
             "format": "byte"
           },
           "description": "Any custom records that should be set on the p2p wire message message of\nthe resumed HTLC. This field is ignored if the action is not\nRESUME_MODIFIED."
+        },
+        "outgoing_amount_msat": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "outgoing_requested_chan_id": {
+          "type": "string",
+          "format": "uint64",
+          "description": "The requested outgoing channel id for this forwarded htlc. Because of\nnon-strict forwarding, this isn't necessarily the channel over which the\npacket will be forwarded eventually. A different channel to the same peer\nmay be selected as well."
+        },
+        "onion_blob": {
+          "type": "string",
+          "format": "byte"
         }
       },
       "description": "*\nForwardHtlcInterceptResponse enables the caller to resolve a previously hold\nforward. The caller can choose either to:\n- `Resume`: Execute the default behavior (usually forward).\n- `ResumeModified`: Execute the default behavior (usually forward) with HTLC\nfield modifications.\n- `Reject`: Fail the htlc backwards.\n- `Settle`: Settle this htlc with a given preimage."
